# pretty_files

./: .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  flake.nix  readme.md
man/: pf.1  pretty_files.1
src/: bare.rs  binary.rs  help.rs  lib.rs  main.rs  text.rs  utils.rs
